css/second-section.css
#content {
  text-align: center;
  height: 600px;
  width: 100%;
  font-family: 'Karla', sans-serif;
  background-color: rgba(220, 220, 220, .5);
}

h2 {
  font-size: 2em;
  font-weight: bold;
}

.me {
  font-size: 1.5em;
  font-family: 'Karla', sans-serif;
}

#skills{
  list-style: none;
}

#skills {
  color: #FF4500;
}

#about-me{
  background-color: rgba(240, 248, 255, .5);
}

